# promenade

./: .gitignore  .gitmodules  CMakeLists.txt  config.yml
build-arm-ubuntu-debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json  promenade.cbp
build-arm-ubuntu-debug/flatbuffers-build/: CTestTestfile.cmake  FlatBuffers.cbp  Makefile  cmake_install.cmake
build-arm-ubuntu-debug/flatbuffers-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
build-arm-ubuntu-debug/flatbuffers-download/flatbuffers-prefix/tmp/: flatbuffers-gitclone.cmake  flatbuffers-gitupdate.cmake
build-arm-ubuntu-debug/impresario-serialization-build/: Makefile  cmake_install.cmake  impresario-serialization.cbp
build-arm-ubuntu-debug/impresario-serialization-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
build-arm-ubuntu-debug/impresario-serialization-download/impresario-serialization-prefix/tmp/: impresario-serialization-gitclone.cmake  impresario-serialization-gitupdate.cmake
build-arm-ubuntu-debug/impresario-serialization-src/: .gitignore  CMakeLists.txt  generate_single_header.py
build-arm-ubuntu-debug/impresario-serialization-src/compiled/cpp/: Glimpse_generated.h  Phenomenon_generated.h
build-arm-ubuntu-debug/impresario-serialization-src/compiled/python/ImpresarioSerialization/: Color.py  Essentia.py  Glimpse.py  IdentifierWrapper.py  Phenomenon.py
build-arm-ubuntu-debug/impresario-serialization-src/lib/cmake-utils/: dependency-downloader.cmake  dependency-integrator.cmake
build-arm-ubuntu-debug/impresario-serialization-src/src/: IdentifierWrapper.fbs
build-arm-ubuntu-debug/impresario-serialization-src/src/cosmology/: Axiomology.fbs  Color.fbs  Essentia.fbs  Glimpse.fbs  Phenomenon.fbs
build-arm-ubuntu-debug/impresario-utils-build/: Makefile  cmake_install.cmake  impresario-utils.cbp
build-arm-ubuntu-debug/impresario-utils-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
build-arm-ubuntu-debug/impresario-utils-download/impresario-utils-prefix/tmp/: impresario-utils-gitclone.cmake  impresario-utils-gitupdate.cmake
build-arm-ubuntu-debug/impresario-utils-src/: .gitmodules
build-arm-ubuntu-debug/impresario-utils-src/include/: ImpresarioUtils.h
build-arm-ubuntu-debug/impresario-utils-src/src/: Bootstrapper.cpp  Config.h  RandomNumberGenerator.cpp  Time.h
build-arm-ubuntu-debug/impresario-utils-src/src/arbiter/: BufferArbiter.h
build-arm-ubuntu-debug/impresario-utils-src/src/circlet/: Circlet.cpp  Circlet.h  Circulable.h
build-arm-ubuntu-debug/impresario-utils-src/src/network/: Parcel.cpp  Parcel.h  Unwrap.cpp  Unwrap.h
build-arm-ubuntu-debug/spdlog-build/: Makefile  cmake_install.cmake  spdlog.cbp
build-arm-ubuntu-debug/spdlog-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
build-arm-ubuntu-debug/ws281x-build/: Makefile  cmake_install.cmake  rpi_ws281x.cbp
build-arm-ubuntu-debug/ws281x-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
build-arm-ubuntu-debug/yaml-build/: CTestTestfile.cmake  Makefile  YAML_CPP.cbp  cmake_install.cmake  yaml-cpp-config.cmake  yaml-cpp-targets.cmake
build-arm-ubuntu-debug/yaml-build/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-arm-ubuntu-debug/yaml-build/util/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-arm-ubuntu-debug/yaml-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
build-arm-ubuntu-release/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json  promenade.cbp
build-arm-ubuntu-release/flatbuffers-build/: CTestTestfile.cmake  FlatBuffers.cbp  Makefile  cmake_install.cmake
build-arm-ubuntu-release/flatbuffers-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
build-arm-ubuntu-release/impresario-serialization-build/: Makefile  cmake_install.cmake  impresario-serialization.cbp
build-arm-ubuntu-release/impresario-serialization-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
build-arm-ubuntu-release/impresario-serialization-src/: compile.sh
build-arm-ubuntu-release/impresario-serialization-src/include/: ImpresarioSerialization.h
build-arm-ubuntu-release/impresario-utils-build/: Makefile  cmake_install.cmake  impresario-utils.cbp
build-arm-ubuntu-release/impresario-utils-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
build-arm-ubuntu-release/impresario-utils-src/: CMakeLists.txt
build-arm-ubuntu-release/impresario-utils-src/src/: Bootstrapper.h  Config.cpp  Macros.h  NonCopyable.h  RandomNumberGenerator.h  Time.cpp  Timer.cpp  Timer.h
build-arm-ubuntu-release/impresario-utils-src/src/arbiter/: Arbiter.h
build-arm-ubuntu-release/impresario-utils-src/src/circlet/: TickingCirculable.h
build-arm-ubuntu-release/impresario-utils-src/src/network/: NetworkSocket.cpp  NetworkSocket.h
build-arm-ubuntu-release/impresario-utils-src/src/percipient/: VolitiaPercipient.h
build-arm-ubuntu-release/spdlog-build/: Makefile  cmake_install.cmake  spdlog.cbp
build-arm-ubuntu-release/spdlog-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
build-arm-ubuntu-release/ws281x-build/: Makefile  cmake_install.cmake  rpi_ws281x.cbp
build-arm-ubuntu-release/ws281x-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
build-arm-ubuntu-release/yaml-build/: CTestTestfile.cmake  Makefile  YAML_CPP.cbp  cmake_install.cmake  yaml-cpp-config.cmake  yaml-cpp-targets.cmake
build-arm-ubuntu-release/yaml-build/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-arm-ubuntu-release/yaml-build/util/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-arm-ubuntu-release/yaml-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/: led_strip.h  leds.h  main.cpp  promenade.cpp  promenade.h
src/semiotics/: blocks.h  paradigm.h  semiotics.h
(+119 files in other folders)
